--- a/pengding_account.html
+++ b/pengding_account.html
@@ -8,7 +8,7 @@
     <meta charset="UTF-8">
     <title>理财信息确认</title>
     <link rel="stylesheet" href="css/pure-min.css">
-    <link rel="stylesheet" href="css/loan.css">
+    <link rel="stylesheet" href="css/account.css">
 </head>
 
 <body>
