50% css framework's done.

--- a/bankcard.html
+++ b/bankcard.html
@@ -14,17 +14,17 @@
 <body>
     <div class="user_main_cards">
         <div class="user_card">
-            <div class="user_card_title">招商银行 信用卡</div>
+            <div class="user_card_title"><i class="bank-zs"></i>招商银行 信用卡</div>
             <div class="user_card_series">6225******9693</div>
             <button>删除</button>
         </div>
         <div class="user_card">
-            <div class="user_card_title">招商银行 信用卡</div>
+            <div class="user_card_title"><i class="bank-gs"></i>工商银行 信用卡</div>
             <div class="user_card_series">6225******9693</div>
             <button>删除</button>
         </div>
         <div class="user_card">
-            <div class="user_card_title">招商银行 信用卡</div>
+            <div class="user_card_title"><i class="bank-gd"></i>光大银行 信用卡</div>
             <div class="user_card_series">6225******9693</div>
             <button class="option1 active">可理财</button>
             <button class="option2 active">可提现</button>
@@ -34,7 +34,7 @@
             <span>+</span>添加银行卡
         </div>
         <p>银行卡处于理财中或担保中状态时无法删除</p>
-        <a class="pure-button loan_main_btn ab_bottom" href="javascript:void(0);">立即推广</a>
+        <a class="pure-button user_main_btn ab_bottom" href="javascript:void(0);">立即推广</a>
     </div>
     <script src="js/zepto.min.js"></script>
 </body>
