--- a/user_center.html
+++ b/user_center.html
@@ -18,7 +18,7 @@
             <h3>杨善平</h2>
             <p>13916026771</p>
         </div>
-        <ul>
+        <ul class="cf">
             <li class="user_bannerList">基础+<span>8</span>%</li>
             <li class="user_bannerList">vip5+<span>2</span>%</li>
             <li class="user_bannerList">特权+<span>2</span>%</li>
@@ -36,7 +36,7 @@
             <div><i class="icon-setting"></i>个人设置</div>
             <div><i class="icon-about"></i>关于我们</div>
         </section>
-        <a class="pure-button loan_main_btn ab_bottom" href="javascript:void(0);">返回</a>
+        <a class="pure-button user_main_btn ab_bottom" href="javascript:void(0);">返回</a>
     </div>
     <script src="js/zepto.min.js"></script>
 </body>
