bankcard & usr_center page finished and bugs fixed in 3 pages

--- a/addcard.html
+++ b/addcard.html
@@ -25,6 +25,17 @@
                     <label>卡号 :</label>
                     <input type="text">
                 </div>
+                <hr>
+                <div class="pure-u-1-1">
+                    <label>手机号 :</label>
+                    <input class="short_input" type="text" maxlength="11">
+                </div>
+                <hr>
+                <div class="pure-u-1-1">
+                    <label>验证码 :</label>
+                    <input class="short_input" type="text" maxlength="6">
+                    <a class="pure-button identity_btn" href="javascript:void(0);">获取验证码</a>
+                </div>
             </div>
             <p class="ft_xs">目前支持银行</p>
             <div class="pure-u-1-1 loan_main_banks">
