--- a/bankcard.html
+++ b/bankcard.html
@@ -6,7 +6,7 @@
     <meta content="yes" name="apple-touch-fullscreen" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <meta charset="UTF-8">
-    <title>理财信息确认</title>
+    <title>银行卡管理</title>
     <link rel="stylesheet" href="css/pure-min.css">
     <link rel="stylesheet" href="css/account.css">
 </head>
@@ -19,12 +19,12 @@
             <button>删除</button>
         </div>
         <div class="user_card">
-            <div class="user_card_title"><i class="bank-gs"></i>工商银行 信用卡</div>
+            <div class="user_card_title"><i class="bank-zs"></i>工商银行 信用卡</div>
             <div class="user_card_series">6225******9693</div>
             <button>删除</button>
         </div>
         <div class="user_card">
-            <div class="user_card_title"><i class="bank-gd"></i>光大银行 信用卡</div>
+            <div class="user_card_title"><i class="bank-zs"></i>光大银行 信用卡</div>
             <div class="user_card_series">6225******9693</div>
             <button class="option1 active">可理财</button>
             <button class="option2 active">可提现</button>
@@ -33,8 +33,8 @@
         <div class="user_card_add">
             <span>+</span>添加银行卡
         </div>
-        <p>银行卡处于理财中或担保中状态时无法删除</p>
-        <a class="pure-button user_main_btn ab_bottom" href="javascript:void(0);">立即推广</a>
+        <p class="user_card_tip">银行卡处于理财中或担保中状态时无法删除。</p>
+        <a class="pure-button user_main_btn ab_bottom" href="javascript:void(0);">返回</a>
     </div>
     <script src="js/zepto.min.js"></script>
 </body>
