promote page finished and need to test, account page's progress: 50%

--- a/test_promote.html
+++ b/test_promote.html
@@ -14,37 +14,37 @@
 <body>
     <header class="user_banner">
         <div class="promote_logo">
-            <img class="pure-img" src="img/promote_logo.png" alt="promote_logo">
+            <img src="img/promote_logo.png" alt="promote_logo">
         </div>
     </header>
     <div class="user_main">
         <section class="user_sec">
             <div>
-                <label>姓名</label>
+                <label>姓&nbsp;&nbsp;&nbsp;&nbsp;名</label>
                 <p>杨善平</p>
             </div>
             <div>
-                <label>公司</label>
+                <label>公&nbsp;&nbsp;&nbsp;&nbsp;司</label>
                 <p>上海喜业网络科技有限公司</p>
             </div>
             <div>
-                <label>职位</label>
+                <label>职&nbsp;&nbsp;&nbsp;&nbsp;位</label>
                 <p>导师</p>
             </div>
             <div>
-                <label>城市</label>
+                <label>城&nbsp;&nbsp;&nbsp;&nbsp;市</label>
                 <p>上海 浦东</p>
             </div>
             <div>
-                <label>邮箱</label>
+                <label>邮&nbsp;&nbsp;&nbsp;&nbsp;箱</label>
                 <p>88888@qq.com</p>
             </div>
             <div>
-                <label>卡号</label>
+                <label>卡&nbsp;&nbsp;&nbsp;&nbsp;号</label>
                 <p>6226 6606 0341 8542</p>
             </div>
         </section>
-        <a class="pure-button loan_main_btn ab_bottom" href="javascript:void(0);">立即推广</a>
+        <a class="pure-button user_main_btn ab_bottom" href="javascript:void(0);">立即推广</a>
     </div>
     <script src="js/zepto.min.js"></script>
 </body>
