--- a/todo_account.html
+++ b/todo_account.html
@@ -28,10 +28,10 @@
     </header>
     <div class="user_main">
         <nav>
-            <ul>
-                <li>已推荐 <span>20</span></li>
-                <li>已理财 <span>3</span></li>
-                <li>已借款 <span>0</span></li>
+            <ul class="pure-g">
+                <li class="pure-u-1-3">已推荐 <span>20</span></li>
+                <li class="pure-u-1-3 active">已理财 <span>3</span></li>
+                <li class="pure-u-1-3">已借款 <span>0</span></li>
             </ul>
         </nav>
         <table class="pure-table pure-table-horizontal">
@@ -53,7 +53,7 @@
                 </tr>
             </tbody>
         </table>
-        <a class="pure-button loan_main_btn ab_bottom" href="javascript:void(0);" 提现</a>
+        <a class="pure-button user_main_btn ab_bottom" href="javascript:void(0);" >提现</a>
     </div>
     <script src="js/zepto.min.js"></script>
 </body>
