86 carnival page  finished

--- a/carnival.html
+++ b/carnival.html
@@ -8,6 +8,9 @@
     <meta name="description" content="表彰大会-代购中国-海外华人留学生代购平台-代购网第一品牌-86daigou.com" />
     <title>表彰大会-代购中国-海外华人留学生代购平台-代购网第一品牌-86daigou.com</title>
     <link rel="stylesheet" href="stylesheets/carnival.css">
+    <!--[if lt IE 10]>
+    <link rel="stylesheet" href="stylesheets/carnival-ie9.css">
+    <![endif]-->
 </head>
 
 <body>
@@ -16,27 +19,147 @@
         <div class="fragment_bg"></div>
         <div class="fragment_sec">
             <div class="fragment_title"></div>
-            <div class="fragment-0"></div>
-            <div class="fragment-1"></div>
-            <div class="fragment-2"></div>
-            <div class="fragment-3"></div>
-            <div class="fragment-4"></div>
-            <div class="fragment-5"></div>
-            <div class="fragment-6"></div>
-            <div class="fragment-7"></div>
-            <div class="fragment-8"></div>
-            <div class="fragment-9"></div>
-            <div class="fragment-10"></div>
-            <div class="fragment-11"></div>
-            <div class="fragment-12"></div>
-            <div class="fragment-13"></div>
-            <div class="fragment-14"></div>
-            <div class="fragment-15"></div>
-            <div class="fragment-16"></div>
+            <div class="fragment_move">
+                <div class="fragment-0"></div>
+                <div class="fragment-1"></div>
+                <div class="fragment-2"></div>
+                <div class="fragment-3"></div>
+                <div class="fragment-4"></div>
+                <div class="fragment-5"></div>
+                <div class="fragment-6"></div>
+                <div class="fragment-7"></div>
+                <div class="fragment-8"></div>
+                <div class="fragment-9"></div>
+                <div class="fragment-10"></div>
+                <div class="fragment-11"></div>
+                <div class="fragment-12"></div>
+                <div class="fragment-13"></div>
+                <div class="fragment-14"></div>
+                <div class="fragment-15"></div>
+                <div class="fragment-16"></div>
+            </div>
+        </div>
+        <div class="main_sec">
+            <div class="main_sec_title">
+                <h2>价格大PK</h2>
+                <h3>全球价最低</h3>
+                <p>86亲情回馈、全国商品折上再加8.6折</p>
+            </div>
+            <div class="main_sec_cnt red">
+                <img src="img2/pk.jpg" height="507" width="1090" alt="">
+                <p>我们是认真的！各大网站所有商品在86下单立享8.6折优惠！</p>
+            </div>
+        </div>
+        <div class="main_sec">
+            <div class="main_sec_title">
+                <h2>幸运大转盘</h2>
+                <h3>狂派1亿现金券</h3>
+                <p>100000000现金大派送！怎么转、都是赚！</p>
+            </div>
+            <div class="main_sec_cnt blue">
+                <div class="tab_wrap">
+                    <div class="tab_bg">
+                        <table>
+                            <thead>
+                                <tr>
+                                    <td width="110">用户</td>
+                                    <td width="150">抽中奖品</td>
+                                    <td width="200">时间</td>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <td>SweetSweetSweetSweetSweetSweetSweetSweetSweetSweetSweetSweet</td>
+                                    <td>88元现金券</td>
+                                    <td>2015.8.6 13:14</td>
+                                </tr>
+                                <tr>
+                                    <td>Sweet</td>
+                                    <td>88元现金券</td>
+                                    <td>2015.8.6 13:14</td>
+                                </tr>
+                                <tr>
+                                    <td>Sweet</td>
+                                    <td>88元现金券</td>
+                                    <td>2015.8.6 13:14</td>
+                                </tr>
+                                <tr>
+                                    <td>Sweet</td>
+                                    <td>88元现金券</td>
+                                    <td>2015.8.6 13:14</td>
+                                </tr>
+                                <tr>
+                                    <td>Sweet</td>
+                                    <td>88元现金券</td>
+                                    <td>2015.8.6 13:14</td>
+                                </tr>
+                                <tr>
+                                    <td>Sweet</td>
+                                    <td>88元现金券</td>
+                                    <td>2015.8.6 13:14</td>
+                                </tr>
+                                <tr>
+                                    <td>Sweet</td>
+                                    <td>88元现金券</td>
+                                    <td>2015.8.6 13:14</td>
+                                </tr>
+                                <tr>
+                                    <td>Sweet</td>
+                                    <td>88元现金券</td>
+                                    <td>2015.8.6 13:14</td>
+                                </tr>
+                                <tr>
+                                    <td>Sweet</td>
+                                    <td>88元现金券</td>
+                                    <td>2015.8.6 13:14</td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+                <img id="award_rotate" src="img2/award_rotate.png" usemap="#award_entrance" height="606" width="557" alt="award_entrance">
+                <map name="award_entrance">
+                    <area shape="circle" data-period-sec="17040" id="award_entrance" coords="287,278,77" href="javascript:void(0);" hidefocus="true">
+                </map>
+            </div>
+        </div>
+        <a href="/" class="main_btn">开始抢购</a>
+    </div>
+    <div class="mask_layer">
+        <div class="mask_layer_bg"></div>
+        <div class="popup">
+            <div class="popup_bar">
+                <div class="popup_bar_x">×</div>
+            </div>
+            <div class="popup_cnt">
+                <img src="img2/qr_mockup.jpg" alt="">
+                <p>扫描二维码100%中奖</p>
+            </div>
         </div>
     </div>
     <script src="js/jquery-1.7.2.min.js"></script>
-
-</body>
+    <script>
+    window.onload = function() {
+        setTimeout(function() {
+            $(".fragment_move").children().addClass("active");
+        }, 100);
+        setTimeout(function() {
+            $(".fragment_title").addClass("active");
+        }, 1600);
+        setTimeout(function() {
+            $(".fragment_bg").addClass("active");
+            $(".banner_bg").addClass("active");
+        }, 1800);
+        setTimeout(function() {
+            $(".fragment_bg").addClass("move");
+        }, 2600);
+        $('#award_entrance').click(function(){
+            $(".mask_layer").fadeIn();
+        });
+        $('.popup_bar_x').click(function(){
+            $(".mask_layer").fadeOut();
+        });
+    }
+    </script>
 
 </html>
