--- a/activity_history.html
+++ b/activity_history.html
@@ -5,6 +5,7 @@
     <meta content="yes" name="apple-mobile-web-app-capable" />
     <meta content="yes" name="apple-touch-fullscreen" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+    <meta content="telephone=no" name="format-detection">
     <meta charset="UTF-8">
     <title>历史活动</title>
     <link rel="stylesheet" href="css/pure-min.css">
@@ -29,7 +30,7 @@
     </div>
     <script src="js/zepto.min.js"></script>
     <script>
-        // init the datas
+    // init the datas
     $("*").click(function() {
         var linkHref = $(this).attr("data-href");
         if (linkHref) window.location.href = linkHref;
