--- a/addcard2.html
+++ b/addcard2.html
@@ -41,8 +41,8 @@
             <div class="pure-u-1-1 loan_main_banks">
                 <img class="pure-img" src="img/banks.jpg" alt="banks">
             </div>
-            <a class="pure-button loan_main_btn" href="loan_credit.html">提交</a>
-            <a class="pure-button loan_main_btn loan_main_btn_hollow" href="javascript:history.back();">返回</a>
+            <a class="pure-button loan_main_btn" href="msjk2.html">提交</a>
+            <a class="pure-button loan_main_btn loan_main_btn_hollow" href="wyjk.html">返回</a>
         </form>
     </div>
 </body>
