--- a/buy.html
+++ b/buy.html
@@ -6,7 +6,7 @@
     <meta content="yes" name="apple-touch-fullscreen" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <meta charset="UTF-8">
-    <title>demo</title>
+    <title>我要理财</title>
     <link rel="stylesheet" href="css/pure-min.css">
     <link rel="stylesheet" href="css/doughnut.css" media="screen" type="text/css" />
 </head>
@@ -70,7 +70,7 @@
                 <h3>安全保障计划</h3>
                 <p>账户资金由银行和中国人保共同保障，资金100%安全</p>
             </div>
-            <a class="pure-button loan_main_btn" href="javascript:void(0);">立即购买</a>
+            <a class="pure-button loan_main_btn" href="addcard2.html">立即购买</a>
         </form>
     </div>
     <script src='js/zepto.min.js'></script>
