--- a/coupon.html
+++ b/coupon.html
@@ -42,7 +42,7 @@
             <h2>免息券</h2>
             <p>1000元以下借款可使用&nbsp;&nbsp;&nbsp;&nbsp;有效期2015年10月30日前 </p>
         </div>
-        <a class="pure-button user_main_btn user_main_btn_hollow" href="javascript:void(0);">返回</a>
+        <a class="pure-button user_main_btn user_main_btn_hollow" href="javascript:history.back();">返回</a>
     </div>
     <div class="user_main user_coupon user_coupon_used">
         <div class="coupon">
@@ -65,7 +65,7 @@
             <h2>免息券</h2>
             <p>1000元以下借款可使用&nbsp;&nbsp;&nbsp;&nbsp;有效期2015年10月30日前 </p>
         </div>
-        <a class="pure-button user_main_btn user_main_btn_hollow" href="javascript:void(0);">返回</a>
+        <a class="pure-button user_main_btn user_main_btn_hollow" href="javascript:history.back();">返回</a>
     </div>
     <script src="js/zepto.min.js"></script>
     <script>
