--- a/finance.html
+++ b/finance.html
@@ -34,7 +34,7 @@
             <div data-href="#"><i class="icon-detail"></i>匹配明细</div>
         </section>
     </div>
-        <a class="pure-button user_main_btn user_main_btn_hollow ab_bottom" href="javascript:void(0);">返回</a>
+        <a class="pure-button user_main_btn user_main_btn_hollow ab_bottom" href="javascript:history.back();">返回</a>
     <script src="js/zepto.min.js"></script>
     <script>
     // init the datas
