--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     </div>
     <div class="pure-g msd_entrance">
         <!-- 跳转链接输入在data-href属性中 -->
-        <div data-href="#" class="pure-u-1-2">
+        <div data-href="buy.html" class="pure-u-1-2">
             <div class="msd_entrance_wrap">
                 <div data-img="马上理财" class="msd_entrance_inner">
                     马上理财
@@ -54,7 +54,7 @@
                 </div>
             </div>
         </div>
-        <div data-href="#" class="pure-u-1-2">
+        <div data-href="wyjk.html" class="pure-u-1-2">
             <div class="msd_entrance_wrap">
                 <div data-img="马上借款" class="msd_entrance_inner">
                     马上借款
@@ -62,14 +62,14 @@
                 </div>
             </div>
         </div>
-        <div data-href="#" class="pure-u-1-2">
+        <div data-href="task.html" class="pure-u-1-2">
             <div class="msd_entrance_wrap">
                 <div data-img="任务中心" class="msd_entrance_inner">
                     任务中心
                 </div>
             </div>
         </div>
-        <div data-href="#" class="pure-u-1-2">
+        <div data-href="user_center.html" class="pure-u-1-2">
             <div class="msd_entrance_wrap">
                 <div data-img="个人中心" class="msd_entrance_inner">
                     个人中心
