--- a/invite.html
+++ b/invite.html
@@ -33,7 +33,7 @@
                 <dd style="display:none;">mockup</dd>
             </dl>
         </div>
-        <a class="pure-button user_main_btn user_main_btn_hollow" href="javascript:void(0);">返回首页</a>
+        <a class="pure-button user_main_btn user_main_btn_hollow" href="index.html">返回首页</a>
     </div>
     <script src="js/zepto.min.js"></script>
     <script>
