--- a/licaiqueren.html
+++ b/licaiqueren.html
@@ -32,7 +32,7 @@
                 <li><a href="#">《出借服务协议》</a></li>
             </ol>
         </div>
-        <a class="pure-button loan_main_btn ab_bottom" href="javascript:void(0);" disabled>提交</a>
+        <a class="pure-button loan_main_btn ab_bottom" href="matching2.html" disabled>提交</a>
     </div>
     <script src="js/zepto.min.js"></script>
     <script>
