--- a/loan_credit.html
+++ b/loan_credit.html
@@ -51,7 +51,7 @@
         <div class="credit_item"><img class="credit_item_icon" src="img/icon_jd.jpg"><span class="flr">+￥500.00 <button class="credit_item_btn">认证</button></span></div>
         <div class="credit_item"><img class="credit_item_icon" src="img/icon_qyyx.jpg"><span class="flr">+￥500.00 <button class="credit_item_btn">认证</button></span></div>
 
-        <a class="pure-button user_main_btn" href="javascript:void(0);">返回</a>
+        <a class="pure-button user_main_btn" href="loan_limit.html">下一步</a>
     </div>
     <script src="js/zepto.min.js"></script>
     <script>
