--- a/loan_limit.html
+++ b/loan_limit.html
@@ -20,8 +20,8 @@
         <span id="data-loan-amount" data-loan-amount="5000"></span>
         <hr>
         <p class="loan_main_credit">您的授信额度已超越了<span data-credit-percentage="65"></span>的小伙伴</p>
-        <a class="pure-button loan_main_btn" href="#">立即借款</a>
-        <a class="pure-button loan_main_btn loan_main_btn_hollow" href="#">继续提升额度</a>
+        <a class="pure-button loan_main_btn" href="msjk.html">立即借款</a>
+        <a class="pure-button loan_main_btn loan_main_btn_hollow" href="loan_credit.html">继续提升额度</a>
     </div>
     <script src="js/zepto.min.js"></script>
     <script>
