--- a/matching_success2.html
+++ b/matching_success2.html
@@ -6,7 +6,7 @@
     <meta content="yes" name="apple-touch-fullscreen" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <meta charset="UTF-8">
-    <title>借款匹配</title>
+    <title>理财匹配</title>
     <link rel="stylesheet" href="css/pure-min.css">
     <link rel="stylesheet" href="css/loan.css">
 </head>
@@ -15,11 +15,11 @@
     <div class="loan_main">
         <div class="loan_match cf">
             <dl class="loan_match_info fl" style="width:17.5%;">
-                <dt>借款信息</dt>
+                <dt>理财信息</dt>
                 <dd><img class="pure-img fr" src="img/loan_avatar.jpg" alt=""><span>2000.00</span></dd>
             </dl>
             <dl class="loan_match_info fr" style="width:17.5%;">
-                <dt>理财信息</dt>
+                <dt>借款信息</dt>
                 <dd><img class="pure-img" src="img/qmark.jpg" alt=""></dd>
             </dl>
             <div class="loan_match_dots">
@@ -27,15 +27,15 @@
                 <i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i>
             </div>
         </div>
-        <a class="pure-button loan_main_btn" href="matching_success.html">升级VIP加速匹配时间</a>
+        <a class="pure-button loan_main_btn" href="javascript:void(0);">升级VIP加速匹配时间</a>
         <!-- 弹出框 -->
-        <div class="mask_layer">
+        <div class="mask_layer" style="display:block;">
             <div class="mask_layer_bg"></div>
             <div class="popup">
                 <div class="popup_cnt">
                     <img src="img/check.jpg" alt="success">
                     <p>匹配成功</p>
-                    <a class="pure-button loan_main_btn loan_main_btn_liteblue" href="javascript:void(0);">查看我的借款</a>
+                    <a class="pure-button loan_main_btn loan_main_btn_liteblue" href="finance.html">查看我的理财</a>
                 </div>
             </div>
         </div>
