--- a/msjk.html
+++ b/msjk.html
@@ -6,7 +6,7 @@
     <meta content="yes" name="apple-touch-fullscreen" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <meta charset="UTF-8">
-    <title>马上理财</title>
+    <title>马上借款</title>
     <link rel="stylesheet" href="css/pure-min.css">
     <link rel="stylesheet" href="css/loan.css">
 </head>
@@ -33,7 +33,7 @@
                 <time>2015-07-11</time>
                 <br /> 请在到期前确保储蓄卡内有足够的还款资金~
             </label>
-            <a class="pure-button loan_main_btn" href="javascript:void(0);">提交</a>
+            <a class="pure-button loan_main_btn" href="mashangjiekuan_confirm.html">提交</a>
             <dl class="loan_main_instr">
                 <dt>说明</dt>
                 <dd>
@@ -44,7 +44,7 @@
                     <span class="span-liteblue" id="data-loan-term" data-loan-term="21"></span>天 ( 暂不支持其他周期的借款 )
                 </dd>
             </dl>
-            <a class="pure-button loan_main_btn loan_main_btn_hollow" href="javascript:void(0);">返回</a>
+            <a class="pure-button loan_main_btn loan_main_btn_hollow" href="javascript:history.back();">返回</a>
         </form>
     </div>
     <script src="js/zepto.min.js"></script>
