--- a/task.html
+++ b/task.html
@@ -55,7 +55,7 @@
         <dl class="task_item active">
             <dt class="task_title">
                 借给10年前的自己
-                <a href="#" class="task_btn">领取</a>
+                <a href="invite.html" class="task_btn">领取</a>
                 <div class="task_stars"><i></i><i></i><i></i></div>
             </dt>
             <dd class="task_cnt">
@@ -142,7 +142,7 @@
                 </div>
             </dd>
         </dl>
-        <a class="pure-button user_main_btn" href="javascript:void(0);">返回</a>
+        <a class="pure-button user_main_btn" href="javascript:history.back();">返回</a>
     </div>
     <script src="js/zepto.min.js"></script>
     <script>
