--- a/user_center.html
+++ b/user_center.html
@@ -27,16 +27,16 @@
     </header>
     <div class="user_main">
         <section class="user_sec">
-            <div data-href="#"><i class="icon-finance"></i>我的理财<span>今日收益 <em>28.13</em> 元</span></div>
+            <div data-href="finance.html"><i class="icon-finance"></i>我的理财<span>今日收益 <em>28.13</em> 元</span></div>
             <div data-href="#"><i class="icon-loan"></i>我的借款</div>
-            <div data-href="#"><i class="icon-card"></i>我的银行卡</div>
-            <div data-href="#"><i class="icon-parameter"></i>我的马力</div>
+            <div data-href="bankcard.html"><i class="icon-card"></i>我的银行卡</div>
+            <div data-href="coupon.html"><i class="icon-parameter"></i>我的优惠券</div>
         </section>
         <section class="user_sec">
             <div data-href="#"><i class="icon-setting"></i>个人设置</div>
             <div data-href="#"><i class="icon-about"></i>关于我们</div>
         </section>
-        <a class="pure-button user_main_btn ab_bottom" href="javascript:void(0);">返回</a>
+        <a class="pure-button user_main_btn ab_bottom" href="javascript:history.back();">返回</a>
     </div>
     <script src="js/zepto.min.js"></script>
     <script>
