--- a/wyjk.html
+++ b/wyjk.html
@@ -38,7 +38,7 @@
                 </table>
             </div>
             <p class="ft_xs">手续费包含1.5%平台管理费及0.5%支付通信费</p>
-            <a class="pure-button loan_main_btn" href="javascript:void(0);">确认借款</a>
+            <a class="pure-button loan_main_btn" href="addcard.html">确认借款</a>
         </form>
     </div>
 </body>
