--- a/msjk2.html
+++ b/msjk2.html
@@ -23,44 +23,29 @@
                 </select>
             </div>
             <mark>改卡暂不支持担保，请重新选择或绑定新卡</mark>
-            <label>借款金额 ( 需为100的整倍数 )</label>
+            <label>理财金额 ( 需为100的整倍数 )</label>
             <div class="pure-u-1-1">
                 <input class="pure-input-1" type="text">
             </div>
-            <p class="ft_xxs">授信借款单笔最低<span class="span-croci" id="data-loan-single" data-loan-single="500"></span>元，手续费为<span class="span-croci" id="data-loan-poundage" data-loan-poundage="3"></span>%</p>
+            <p class="ft_xxs">授信理财单笔最低<span class="span-croci" id="data-loan-single" data-loan-single="500"></span>元，手续费为<span class="span-croci" id="data-loan-poundage" data-loan-poundage="3"></span>%</p>
             <label class="lab_finance">
                 预计还款时间为
                 <time>2015-07-11</time>
                 <br /> 请在到期前确保储蓄卡内有足够的还款资金~
             </label>
-            <a class="pure-button loan_main_btn" href="javascript:void(0);">提交</a>
+            <a class="pure-button loan_main_btn" href="licaiqueren.html">提交</a>
             <dl class="loan_main_instr">
                 <dt>说明</dt>
                 <dd>
                     您的授信额度为<span class="span-croci" id="data-loan-max" data-loan-max="5000"></span>元；
-                    <br /> 您已借款
+                    <br /> 您已理财
                     <span class="span-croci" id="data-loan-used" data-loan-used="2000"></span>元，剩余可借额度为<span class="span-croci" id="data-loan-left" data-loan-left="3000"></span>元；
-                    <br /> 借款期限为
-                    <span class="span-liteblue" id="data-loan-term" data-loan-term="21"></span>天 ( 暂不支持其他周期的借款 )
+                    <br /> 理财期限为
+                    <span class="span-liteblue" id="data-loan-term" data-loan-term="21"></span>天 ( 暂不支持其他周期的理财 )
                 </dd>
             </dl>
-            <a class="pure-button loan_main_btn loan_main_btn_hollow" href="javascript:void(0);">返回</a>
+            <a class="pure-button loan_main_btn loan_main_btn_hollow" href="javascript:history.back();">返回</a>
         </form>
-        <!-- 弹出框 -->
-        <div class="mask_layer" style="display:block;">
-            <div class="mask_layer_bg"></div>
-            <div class="popup">
-                <div class="popup_cnt">
-                    <div class="popup_confirm cf">
-                        <em>您本次将借款<span>2000.00</span>元</em>
-                        <p>借款费率<span>3</span>%</p>
-                        <p>手续费为<span>60.00</span>元</p>
-                        <a class="pure-button loan_main_btn loan_main_btn_liteblue" href="matching.html">确认</a>
-                        <a class="pure-button loan_main_btn loan_main_btn_liteblue loan_main_btn_hollow" href="javascript:history.back();">取消</a>
-                    </div>
-                </div>
-            </div>
-        </div>
     </div>
     <script src="js/zepto.min.js"></script>
     <script>
